%% src\furniture\furniture.diagram.mmd

classDiagram
    %% DTOs
    class CreateFurnitureDto {
        +name: string
        +description: string
        +id_type: number
        +size: string
        +colour: string
        +quantity: number
        +price: number
        +status: status
        +deleted_at?: Date | null
    }
    class UpdateFurnitureDto
    UpdateFurnitureDto --|> CreateFurnitureDto : extends (PartialType)

    class FurnitureResponseDto {
        +id: number
        +name: string
        +description: string
        +id_type: number
        +size: string
        +colour: string
        +quantity: number
        +price: number
        +status: status
        +imageUrls?: string[]
        +deleted_at?: Date | null
    }

    %% Service
    class FurnitureService {
        +constructor(prisma: PrismaService)
        +create(data: CreateFurnitureDto): Promise<furniture>
        +findAll(): Promise<furniture[]>
        +findOne(id: number): Promise<furniture | null>
        +update(id: number, data: UpdateFurnitureDto): Promise<furniture>
        +remove(id: number): Promise<furniture>
    }

    %% Controller
    class FurnitureController {
        +constructor(furnitureService: FurnitureService)
        +create(createFurnitureDto: CreateFurnitureDto): Promise<FurnitureResponseDto>
        +findAll(): Promise<FurnitureResponseDto[]>
        +findOne(id: string): Promise<FurnitureResponseDto>
        +update(id: string, updateFurnitureDto: UpdateFurnitureDto): Promise<FurnitureResponseDto>
        +remove(id: string): Promise<FurnitureResponseDto>
    }

    %% Module
    class FurnitureModule {
        <<Module>>
    }

    %% Relationships
    FurnitureController --> FurnitureService : depends on
    FurnitureController ..> CreateFurnitureDto : uses
    FurnitureController ..> UpdateFurnitureDto : uses
    FurnitureController ..> FurnitureResponseDto : returns
    FurnitureService ..> CreateFurnitureDto : uses
    FurnitureService ..> UpdateFurnitureDto : uses
    FurnitureModule o-- FurnitureController : provides
    FurnitureModule o-- FurnitureService : provides
